--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: node_js
 # Will use version from .nvmrc
 
@@ -5,8 +7,11 @@ cache:
   directories:
     - $HOME/.npm
 
+before_install:
+  - curl https://install.meteor.com | /bin/sh
+  - export PATH="$HOME/.meteor:$PATH"
+
 install:
-  - curl https://install.meteor.com/ | sh
   - cd tests && npm install
 
 script:
