--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,10 @@ before_install:
 install:
   - cd tests && npm install
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 script:
   - npm test
