--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
-sudo: false
+sudo: required
+dist: trusty
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 
 language: node_js
 # Will use version from .nvmrc
